demo-server/k8s/default/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-server-service-front
spec:
  type: NodePort
  ports:
    - name: http
      port: 443
      targetPort: 8443
      protocol: TCP
  selector:
    app: demo-server-front
