demo-server/k8s/default/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-server-ingress
  annotations:
    ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
   - http:
      paths:
      - path: /
        backend:
          serviceName: demo-server-service-front
          servicePort: 443
